Modify bootstrap and import img

--- a/CSS/all.css
+++ b/CSS/all.css
@@ -51,7 +51,7 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  background-color: #fff;
+  background-color: #000;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -568,7 +568,7 @@ progress {
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #fff;
+  background-color: #000;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -2285,10 +2285,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(241, 135, 36, 0.25);
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.25rem rgba(241, 135, 36, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(241, 135, 36, 0.25);
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.25rem rgba(241, 135, 36, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -3643,8 +3643,8 @@ textarea.form-control-lg {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: #fff;
-  border-color: #dee2e6 #dee2e6 #fff;
+  background-color: #000;
+  border-color: #dee2e6 #dee2e6 #000;
 }
 .nav-tabs .dropdown-menu {
   margin-top: -1px;
@@ -4089,6 +4089,10 @@ textarea.form-control-lg {
   margin-left: -0.5rem;
   border-bottom: 0;
 }
+.card-header-tabs .nav-link.active {
+  background-color: #fff;
+  border-bottom-color: #fff;
+}
 
 .card-header-pills {
   margin-right: -0.5rem;
@@ -4174,7 +4178,7 @@ textarea.form-control-lg {
   font-size: 1rem;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background-color: #000;
   border: 0;
   border-radius: 0;
   overflow-anchor: none;
@@ -4225,7 +4229,7 @@ textarea.form-control-lg {
 }
 
 .accordion-item {
-  background-color: #fff;
+  background-color: #000;
   border: 1px solid rgba(0, 0, 0, 0.125);
 }
 .accordion-item:first-of-type {
@@ -7145,7 +7149,7 @@ textarea.form-control-lg {
 }
 
 .bg-body {
-  background-color: #fff !important;
+  background-color: #000 !important;
 }
 
 .bg-white {
@@ -9848,4 +9852,16 @@ body {
 img {
   max-width: 100%;
   height: auto;
+}
+
+.logo a {
+  display: block;
+  background-image: url("../img/logo.png");
+  text-decoration: none;
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 24px;
+  text-indent: 101%;
+  overflow: hidden;
+  white-space: nowrap;
 }/*# sourceMappingURL=all.css.map */
