Modify reset css

--- a/SCSS/bootstrap/_variables.scss
+++ b/SCSS/bootstrap/_variables.scss
@@ -289,7 +289,7 @@ $position-values: (
 // Settings for the `<body>` element.
 
 $body-bg:                   $black !default;
-$body-color:                $gray-900 !default;
+$body-color:                $white !default;
 $body-text-align:           null !default;
 
 
