--- a/CSS/all.css
+++ b/CSS/all.css
@@ -9856,13 +9856,34 @@ img {
 }
 
 .logo a {
-  display: block;
+  display: inline-block;
   background-image: url("../img/logo.png");
   text-decoration: none;
   background-size: contain;
   background-repeat: no-repeat;
-  height: 24px;
+  height: 40px;
+  width: 188px;
+  /*  將文字推出 <h1>  */
   text-indent: 101%;
   overflow: hidden;
   white-space: nowrap;
+}
+
+.social {
+  padding-right: 50%;
+}
+
+@media (max-width: 768px) {
+  .header ul {
+    flex-direction: column;
+  }
+  .social {
+    margin-top: 36px;
+    order: 3;
+  }
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }/*# sourceMappingURL=all.css.map */
