--- a/SCSS/all.scss
+++ b/SCSS/all.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700;900&display=swap');
 @import "bootstrap/bootstrap";
 @import "reset";
 @import "base";
