--- a/SCSS/bootstrap/_variables.scss
+++ b/SCSS/bootstrap/_variables.scss
@@ -84,7 +84,7 @@ $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-900 !default;
 // Customized Variables
-$surface:       #F2EFE7!default;
+$black:         $black-100!default;
 // ---------------
 
 // scss-docs-end theme-color-variables
@@ -99,6 +99,7 @@ $theme-colors: (
   "danger":     $danger,
   "light":      $light,
   "dark":       $dark,
+  "black":      $black,
 ) !default;
 // scss-docs-end theme-colors-map
 
