--- a/SCSS/_home.scss
+++ b/SCSS/_home.scss
@@ -57,6 +57,11 @@
     max-width: initial; // set a CSS property to its default value
 }
 
+/* Tool */
+.tool-item {
+    width: 416px;
+}
+
 .display-1 {
     display: block;
 }
