--- a/SCSS/bootstrap/_variables.scss
+++ b/SCSS/bootstrap/_variables.scss
@@ -450,7 +450,7 @@ $font-weight-lighter:         lighter !default;
 $font-weight-light:           300 !default;
 $font-weight-normal:          400 !default;
 $font-weight-bold:            700 !default;
-$font-weight-bolder:          bolder !default;
+$font-weight-bolder:          900 !default;
 
 $font-weight-base:            $font-weight-normal !default;
 
@@ -468,12 +468,12 @@ $h6-font-size:                $font-size-base !default;
 
 // scss-docs-start font-sizes
 $font-sizes: (
-  1: $h1-font-size,
-  2: $h2-font-size,
-  3: $h3-font-size,
-  4: $h4-font-size,
-  5: $h5-font-size,
-  6: $h6-font-size
+  1: $h1-font-size, // 40px
+  2: $h2-font-size, // 32px
+  3: $h3-font-size, // 28px
+  4: $h4-font-size, // 24px
+  5: $h5-font-size, // 20px
+  6: $h6-font-size  // 16px
 ) !default;
 // scss-docs-end font-sizes
 
