--- a/SCSS/bootstrap/_variables.scss
+++ b/SCSS/bootstrap/_variables.scss
@@ -268,6 +268,8 @@ $spacers: (
   3: $spacer,             // 16px
   4: $spacer * 1.5,       // 24px
   5: $spacer * 2.5,       // 40px
+  6: $spacer * 5,         // 80px
+  7: $spacer * 10,        // 160px
 ) !default;
 
 $negative-spacers: if($enable-negative-margins, negativify-map($spacers), null) !default;
@@ -377,7 +379,7 @@ $border-widths: (
   2: 2px,
   3: 3px,
   4: 4px,
-  5: 5px
+  5: 5px,
 ) !default;
 
 $border-color:                $gray-300 !default;
