--- a/SCSS/_home.scss
+++ b/SCSS/_home.scss
@@ -60,8 +60,53 @@
 /* Tool */
 .tool-item {
     width: 416px;
-}
 
+    .img-container {
+        overflow: hidden;
+        .zoom {
+            transition: transform .3s;
+        }
+    }
+
+    &:hover {
+        .zoom {
+        transform: scale(1.2);
+        }
+    }
+}
+.content-container {
+    //  li內多餘的flex空間分配給content-container區塊，讓內部的文字敘述對齊，不受行數影響
+    flex-grow:1; 
+    display: flex;
+    flex-direction: column;
+    h3 {
+      font-size: 20px;
+      font-weight: 900;
+      margin-bottom: 12px;
+    }
+    a {
+        color: initial;
+    }
+    .caption {
+      font-size: 14px;
+      color: $black-80;
+    }
+    .ai-desc {
+      padding: 20px 32px;
+      flex-grow:1;
+    }
+    .ai-info {
+      border-top: 1px solid $black-80;
+      border-bottom: 1px solid $black-80;
+    }
+    .ai-info,
+    .ai-hashtag {
+      display: flex;
+      justify-content: space-between;
+      padding: 20px 32px;
+      align-items: center;
+    }
+}
 
 /* Custimized Utility */ 
 .display-1 {
