[Bootstrap] : set $pagination-border-radius to null

--- a/SCSS/bootstrap/_pagination.scss
+++ b/SCSS/bootstrap/_pagination.scss
@@ -53,7 +53,7 @@
 //
 // Sizing
 //
-@include pagination-size($pagination-padding-y, $pagination-padding-x, null, $pagination-border-radius);
+@include pagination-size($pagination-padding-y, $pagination-padding-x, null, null); // set $pagination-border-radius to null
 
 .pagination-lg {
   @include pagination-size($pagination-padding-y-lg, $pagination-padding-x-lg, $font-size-lg, $pagination-border-radius-lg);
