--- a/CSS/all.css
+++ b/CSS/all.css
@@ -4557,15 +4557,6 @@ textarea.form-control-lg {
   padding: 0.375rem 0.75rem;
 }
 
-.page-item:first-child .page-link {
-  border-top-left-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-}
-.page-item:last-child .page-link {
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-}
-
 .pagination-lg .page-link {
   padding: 0.75rem 1.5rem;
   font-size: 1.25rem;
@@ -11129,8 +11120,8 @@ img {
   flex-grow: 1;
 }
 .content-container .ai-info {
-  border-top: 1px solid #525252;
-  border-bottom: 1px solid #525252;
+  border-top: 1px solid #D1D1D1;
+  border-bottom: 1px solid #D1D1D1;
 }
 .content-container .ai-info,
 .content-container .ai-hashtag {
