--- a/CSS/bootstrap.css
+++ b/CSS/bootstrap.css
@@ -19,7 +19,7 @@
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
-  --bs-primary: #F18724;
+  --bs-primary: #020202;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -203,11 +203,11 @@ sup {
 }
 
 a {
-  color: #F18724;
+  color: #020202;
   text-decoration: none;
 }
 a:hover {
-  color: #c16c1d;
+  color: #020202;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -1915,15 +1915,15 @@ progress {
 }
 
 .table-primary {
-  --bs-table-bg: #fce7d3;
-  --bs-table-striped-bg: #efdbc8;
+  --bs-table-bg: #cccccc;
+  --bs-table-striped-bg: #c2c2c2;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #e3d0be;
+  --bs-table-active-bg: #b8b8b8;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e9d6c3;
+  --bs-table-hover-bg: #bdbdbd;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #e3d0be;
+  border-color: #b8b8b8;
 }
 
 .table-secondary {
@@ -2109,9 +2109,9 @@ progress {
 .form-control:focus {
   color: #fff;
   background-color: #fff;
-  border-color: #f8c392;
+  border-color: #818181;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(241, 135, 36, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(2, 2, 2, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.5em;
@@ -2288,9 +2288,9 @@ textarea.form-control-lg {
           appearance: none;
 }
 .form-select:focus {
-  border-color: #f8c392;
+  border-color: #818181;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(241, 135, 36, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(2, 2, 2, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2355,13 +2355,13 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: #f8c392;
+  border-color: #818181;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(241, 135, 36, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(2, 2, 2, 0.25);
 }
 .form-check-input:checked {
-  background-color: #F18724;
-  border-color: #F18724;
+  background-color: #020202;
+  border-color: #020202;
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
@@ -2370,8 +2370,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #F18724;
-  border-color: #F18724;
+  background-color: #020202;
+  border-color: #020202;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2400,7 +2400,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23f8c392'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23818181'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -2436,10 +2436,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #000, 0 0 0 0.25rem rgba(241, 135, 36, 0.25);
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.25rem rgba(2, 2, 2, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #000, 0 0 0 0.25rem rgba(241, 135, 36, 0.25);
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.25rem rgba(2, 2, 2, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -2448,7 +2448,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #F18724;
+  background-color: #020202;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2463,7 +2463,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: #fbdbbd;
+  background-color: #b3b3b3;
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2477,7 +2477,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #F18724;
+  background-color: #020202;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2492,7 +2492,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: #fbdbbd;
+  background-color: #b3b3b3;
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -2850,7 +2850,7 @@ textarea.form-control-lg {
 }
 .btn-check:focus + .btn, .btn:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(241, 135, 36, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(2, 2, 2, 0.25);
 }
 .btn:disabled, .btn.disabled, fieldset:disabled .btn {
   pointer-events: none;
@@ -2858,33 +2858,33 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  color: #000;
-  background-color: #F18724;
-  border-color: #F18724;
+  color: #fff;
+  background-color: #020202;
+  border-color: #020202;
 }
 .btn-primary:hover {
-  color: #000;
-  background-color: #f39945;
-  border-color: #f2933a;
+  color: #fff;
+  background-color: #020202;
+  border-color: #020202;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
-  color: #000;
-  background-color: #f39945;
-  border-color: #f2933a;
-  box-shadow: 0 0 0 0.25rem rgba(205, 115, 31, 0.5);
+  color: #fff;
+  background-color: #020202;
+  border-color: #020202;
+  box-shadow: 0 0 0 0.25rem rgba(40, 40, 40, 0.5);
 }
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
-  color: #000;
-  background-color: #f49f50;
-  border-color: #f2933a;
+  color: #fff;
+  background-color: #020202;
+  border-color: #020202;
 }
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(205, 115, 31, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(40, 40, 40, 0.5);
 }
 .btn-primary:disabled, .btn-primary.disabled {
-  color: #000;
-  background-color: #F18724;
-  border-color: #F18724;
+  color: #fff;
+  background-color: #020202;
+  border-color: #020202;
 }
 
 .btn-secondary {
@@ -3128,27 +3128,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  color: #F18724;
-  border-color: #F18724;
+  color: #020202;
+  border-color: #020202;
 }
 .btn-outline-primary:hover {
-  color: #000;
-  background-color: #F18724;
-  border-color: #F18724;
+  color: #fff;
+  background-color: #020202;
+  border-color: #020202;
 }
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
-  box-shadow: 0 0 0 0.25rem rgba(241, 135, 36, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(2, 2, 2, 0.5);
 }
 .btn-check:checked + .btn-outline-primary, .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
-  color: #000;
-  background-color: #F18724;
-  border-color: #F18724;
+  color: #fff;
+  background-color: #020202;
+  border-color: #020202;
 }
 .btn-check:checked + .btn-outline-primary:focus, .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(241, 135, 36, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(2, 2, 2, 0.5);
 }
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #F18724;
+  color: #020202;
   background-color: transparent;
 }
 
@@ -3354,11 +3354,11 @@ textarea.form-control-lg {
 
 .btn-link {
   font-weight: 400;
-  color: #F18724;
+  color: #020202;
   text-decoration: none;
 }
 .btn-link:hover {
-  color: #c16c1d;
+  color: #020202;
 }
 .btn-link:disabled, .btn-link.disabled {
   color: #6c757d;
@@ -3647,7 +3647,7 @@ textarea.form-control-lg {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #F18724;
+  background-color: #020202;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #adb5bd;
@@ -3688,7 +3688,7 @@ textarea.form-control-lg {
 }
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #fff;
-  background-color: #F18724;
+  background-color: #020202;
 }
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
   color: #adb5bd;
@@ -3810,7 +3810,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #F18724;
+  color: #020202;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -3819,7 +3819,7 @@ textarea.form-control-lg {
   }
 }
 .nav-link:hover, .nav-link:focus {
-  color: #c16c1d;
+  color: #020202;
 }
 .nav-link.disabled {
   color: #6c757d;
@@ -3866,7 +3866,7 @@ textarea.form-control-lg {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #F18724;
+  background-color: #020202;
 }
 
 .nav-fill > .nav-link,
@@ -4395,12 +4395,12 @@ textarea.form-control-lg {
   }
 }
 .accordion-button:not(.collapsed) {
-  color: #d97a20;
-  background-color: #fef3e9;
+  color: #020202;
+  background-color: #e6e6e6;
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
 }
 .accordion-button:not(.collapsed)::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23d97a20'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23020202'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   transform: rotate(-180deg);
 }
 .accordion-button::after {
@@ -4424,9 +4424,9 @@ textarea.form-control-lg {
 }
 .accordion-button:focus {
   z-index: 3;
-  border-color: #f8c392;
+  border-color: #818181;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(241, 135, 36, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(2, 2, 2, 0.25);
 }
 
 .accordion-header {
@@ -4513,7 +4513,7 @@ textarea.form-control-lg {
 .page-link {
   position: relative;
   display: block;
-  color: #F18724;
+  color: #020202;
   background-color: #fff;
   border: 1px solid #dee2e6;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4525,16 +4525,16 @@ textarea.form-control-lg {
 }
 .page-link:hover {
   z-index: 2;
-  color: #c16c1d;
+  color: #020202;
   background-color: #e9ecef;
   border-color: #dee2e6;
 }
 .page-link:focus {
   z-index: 3;
-  color: #c16c1d;
+  color: #020202;
   background-color: #e9ecef;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(241, 135, 36, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(2, 2, 2, 0.25);
 }
 
 .page-item:not(:first-child) .page-link {
@@ -4543,8 +4543,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #F18724;
-  border-color: #F18724;
+  background-color: #020202;
+  border-color: #020202;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4632,12 +4632,12 @@ textarea.form-control-lg {
 }
 
 .alert-primary {
-  color: #915116;
-  background-color: #fce7d3;
-  border-color: #fbdbbd;
+  color: #010101;
+  background-color: #cccccc;
+  border-color: #b3b3b3;
 }
 .alert-primary .alert-link {
-  color: #744112;
+  color: #010101;
 }
 
 .alert-secondary {
@@ -4734,7 +4734,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #F18724;
+  background-color: #020202;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -4814,8 +4814,8 @@ textarea.form-control-lg {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #F18724;
-  border-color: #F18724;
+  background-color: #020202;
+  border-color: #020202;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -4979,17 +4979,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-primary {
-  color: #915116;
-  background-color: #fce7d3;
+  color: #010101;
+  background-color: #cccccc;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #915116;
-  background-color: #e3d0be;
+  color: #010101;
+  background-color: #b8b8b8;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #915116;
-  border-color: #915116;
+  background-color: #010101;
+  border-color: #010101;
 }
 
 .list-group-item-secondary {
@@ -5122,7 +5122,7 @@ textarea.form-control-lg {
 }
 .btn-close:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(241, 135, 36, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(2, 2, 2, 0.25);
   opacity: 1;
 }
 .btn-close:disabled, .btn-close.disabled {
@@ -6048,10 +6048,10 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #F18724;
+  color: #020202;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #f49f50;
+  color: #020202;
 }
 
 .link-secondary {
@@ -6458,7 +6458,7 @@ textarea.form-control-lg {
 }
 
 .border-primary {
-  border-color: #F18724 !important;
+  border-color: #020202 !important;
 }
 
 .border-secondary {
@@ -7483,7 +7483,7 @@ textarea.form-control-lg {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #F18724 !important;
+  color: #020202 !important;
 }
 
 .text-secondary {
@@ -7543,7 +7543,7 @@ textarea.form-control-lg {
 }
 
 .bg-primary {
-  background-color: #F18724 !important;
+  background-color: #020202 !important;
 }
 
 .bg-secondary {
