--- a/SCSS/bootstrap/_variables.scss
+++ b/SCSS/bootstrap/_variables.scss
@@ -75,7 +75,7 @@ $colors: (
 // scss-docs-end colors-map
 
 // scss-docs-start theme-color-variables
-$primary:       #F18724 !default;
+$primary:       $black-100 !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
@@ -83,8 +83,6 @@ $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-900 !default;
-// Customized Variables
-$black:         $black-100!default;
 // ---------------
 
 // scss-docs-end theme-color-variables
@@ -301,7 +299,7 @@ $body-text-align:           null !default;
 //
 // Style anchor elements.
 
-$link-color:                              $primary !default;
+$link-color:                              $black-100 !default;
 $link-decoration:                         none !default;
 $link-shade-percentage:                   20% !default;
 $link-hover-color:                        shift-color($link-color, $link-shade-percentage) !default;
