--- a/SCSS/bootstrap/_pagination.scss
+++ b/SCSS/bootstrap/_pagination.scss
@@ -9,7 +9,7 @@
   color: $pagination-color;
   text-decoration: if($link-decoration == none, null, none);
   background-color: $pagination-bg;
-  border: $pagination-border-width solid $pagination-border-color;
+  // border: $pagination-border-width solid $pagination-border-color;
   @include transition($pagination-transition);
 
   &:hover {
