--- a/CSS/all.css
+++ b/CSS/all.css
@@ -11083,6 +11083,19 @@ img {
   max-width: initial;
 }
 
+/* Recommend */
+.recommend .card {
+  background: rgba(255, 255, 255, 0.0784313725);
+  padding: 40px;
+  width: 416px;
+  height: 400px;
+}
+
+.comment {
+  margin: 20px 0px;
+  height: 215px;
+}
+
 /* Tool */
 .tool-item {
   width: 416px;
