--- a/SCSS/_home.scss
+++ b/SCSS/_home.scss
@@ -170,6 +170,9 @@
     }          
 }
 @media(max-width: 768px){
+    .container {
+        padding: 30px;
+    }
     .header ul{
         flex-direction: column;
         justify-content: center;
