--- a/CSS/all.css
+++ b/CSS/all.css
@@ -11010,7 +11010,6 @@ body {
 }
 
 .container {
-  max-width: 1296px;
   margin: 0 auto;
 }
 
@@ -11030,9 +11029,19 @@ img {
   width: auto;
 }
 
-/* Banner */
-.banner {
-  white-space: pre-line;
+/* Service */
+.service-list .card {
+  background: #000;
+  padding: 80px 40px;
+  gap: 20px;
+}
+
+.service-item {
+  width: 416px;
+  border: 1px solid #525252;
+}
+.service-item span {
+  font-size: 80px;
 }
 
 /* Enterprise */
@@ -11181,6 +11190,10 @@ img {
 
 .border-radius-160 {
   border-radius: 160px;
+}
+
+.whitespace-pre-line {
+  white-space: pre-line;
 }
 
 @media (max-width: 992px) {
