--- a/SCSS/_base.scss
+++ b/SCSS/_base.scss
@@ -2,7 +2,7 @@
 *::before,
 ::after {
     box-sizing: border-box;
-    outline: 1px solid $gray-800;
+    // outline: 1px solid $gray-800;
 }
 
 body {
