[ Boostrap ] Turn "font-size" responsive  true

--- a/SCSS/bootstrap/_utilities.scss
+++ b/SCSS/bootstrap/_utilities.scss
@@ -432,6 +432,7 @@ $utilities: map-merge(
       values: (monospace: var(--#{$variable-prefix}font-monospace))
     ),
     "font-size": (
+      responsive: true, // Make font-size responsive
       rfs: true,
       property: font-size,
       class: fs,
