--- a/CSS/all.css
+++ b/CSS/all.css
@@ -7386,6 +7386,14 @@ textarea.form-control-lg {
   font-size: 1rem !important;
 }
 
+.fs-120 {
+  font-size: calc(1.875rem + 7.5vw) !important;
+}
+
+.fs-48 {
+  font-size: calc(1.425rem + 2.1vw) !important;
+}
+
 .fst-italic {
   font-style: italic !important;
 }
@@ -8308,6 +8316,30 @@ textarea.form-control-lg {
   .ps-sm-8 {
     padding-left: 10rem !important;
   }
+  .fs-sm-1 {
+    font-size: calc(1.375rem + 1.5vw) !important;
+  }
+  .fs-sm-2 {
+    font-size: calc(1.325rem + 0.9vw) !important;
+  }
+  .fs-sm-3 {
+    font-size: calc(1.3rem + 0.6vw) !important;
+  }
+  .fs-sm-4 {
+    font-size: calc(1.275rem + 0.3vw) !important;
+  }
+  .fs-sm-5 {
+    font-size: 1.25rem !important;
+  }
+  .fs-sm-6 {
+    font-size: 1rem !important;
+  }
+  .fs-sm-120 {
+    font-size: calc(1.875rem + 7.5vw) !important;
+  }
+  .fs-sm-48 {
+    font-size: calc(1.425rem + 2.1vw) !important;
+  }
   .text-sm-start {
     text-align: left !important;
   }
@@ -8950,6 +8982,30 @@ textarea.form-control-lg {
   }
   .ps-md-8 {
     padding-left: 10rem !important;
+  }
+  .fs-md-1 {
+    font-size: calc(1.375rem + 1.5vw) !important;
+  }
+  .fs-md-2 {
+    font-size: calc(1.325rem + 0.9vw) !important;
+  }
+  .fs-md-3 {
+    font-size: calc(1.3rem + 0.6vw) !important;
+  }
+  .fs-md-4 {
+    font-size: calc(1.275rem + 0.3vw) !important;
+  }
+  .fs-md-5 {
+    font-size: 1.25rem !important;
+  }
+  .fs-md-6 {
+    font-size: 1rem !important;
+  }
+  .fs-md-120 {
+    font-size: calc(1.875rem + 7.5vw) !important;
+  }
+  .fs-md-48 {
+    font-size: calc(1.425rem + 2.1vw) !important;
   }
   .text-md-start {
     text-align: left !important;
@@ -9594,6 +9650,30 @@ textarea.form-control-lg {
   .ps-lg-8 {
     padding-left: 10rem !important;
   }
+  .fs-lg-1 {
+    font-size: calc(1.375rem + 1.5vw) !important;
+  }
+  .fs-lg-2 {
+    font-size: calc(1.325rem + 0.9vw) !important;
+  }
+  .fs-lg-3 {
+    font-size: calc(1.3rem + 0.6vw) !important;
+  }
+  .fs-lg-4 {
+    font-size: calc(1.275rem + 0.3vw) !important;
+  }
+  .fs-lg-5 {
+    font-size: 1.25rem !important;
+  }
+  .fs-lg-6 {
+    font-size: 1rem !important;
+  }
+  .fs-lg-120 {
+    font-size: calc(1.875rem + 7.5vw) !important;
+  }
+  .fs-lg-48 {
+    font-size: calc(1.425rem + 2.1vw) !important;
+  }
   .text-lg-start {
     text-align: left !important;
   }
@@ -10236,6 +10316,30 @@ textarea.form-control-lg {
   }
   .ps-xl-8 {
     padding-left: 10rem !important;
+  }
+  .fs-xl-1 {
+    font-size: calc(1.375rem + 1.5vw) !important;
+  }
+  .fs-xl-2 {
+    font-size: calc(1.325rem + 0.9vw) !important;
+  }
+  .fs-xl-3 {
+    font-size: calc(1.3rem + 0.6vw) !important;
+  }
+  .fs-xl-4 {
+    font-size: calc(1.275rem + 0.3vw) !important;
+  }
+  .fs-xl-5 {
+    font-size: 1.25rem !important;
+  }
+  .fs-xl-6 {
+    font-size: 1rem !important;
+  }
+  .fs-xl-120 {
+    font-size: calc(1.875rem + 7.5vw) !important;
+  }
+  .fs-xl-48 {
+    font-size: calc(1.425rem + 2.1vw) !important;
   }
   .text-xl-start {
     text-align: left !important;
@@ -10880,6 +10984,30 @@ textarea.form-control-lg {
   .ps-xxl-8 {
     padding-left: 10rem !important;
   }
+  .fs-xxl-1 {
+    font-size: calc(1.375rem + 1.5vw) !important;
+  }
+  .fs-xxl-2 {
+    font-size: calc(1.325rem + 0.9vw) !important;
+  }
+  .fs-xxl-3 {
+    font-size: calc(1.3rem + 0.6vw) !important;
+  }
+  .fs-xxl-4 {
+    font-size: calc(1.275rem + 0.3vw) !important;
+  }
+  .fs-xxl-5 {
+    font-size: 1.25rem !important;
+  }
+  .fs-xxl-6 {
+    font-size: 1rem !important;
+  }
+  .fs-xxl-120 {
+    font-size: calc(1.875rem + 7.5vw) !important;
+  }
+  .fs-xxl-48 {
+    font-size: calc(1.425rem + 2.1vw) !important;
+  }
   .text-xxl-start {
     text-align: left !important;
   }
@@ -10902,6 +11030,66 @@ textarea.form-control-lg {
   }
   .fs-4 {
     font-size: 1.5rem !important;
+  }
+  .fs-120 {
+    font-size: 7.5rem !important;
+  }
+  .fs-48 {
+    font-size: 3rem !important;
+  }
+  .fs-sm-1 {
+    font-size: 2.5rem !important;
+  }
+  .fs-sm-2 {
+    font-size: 2rem !important;
+  }
+  .fs-sm-3 {
+    font-size: 1.75rem !important;
+  }
+  .fs-sm-4 {
+    font-size: 1.5rem !important;
+  }
+  .fs-sm-120 {
+    font-size: 7.5rem !important;
+  }
+  .fs-sm-48 {
+    font-size: 3rem !important;
+  }
+  .fs-md-1 {
+    font-size: 2.5rem !important;
+  }
+  .fs-md-2 {
+    font-size: 2rem !important;
+  }
+  .fs-md-3 {
+    font-size: 1.75rem !important;
+  }
+  .fs-md-4 {
+    font-size: 1.5rem !important;
+  }
+  .fs-md-120 {
+    font-size: 7.5rem !important;
+  }
+  .fs-md-48 {
+    font-size: 3rem !important;
+  }
+  .fs-lg-1 {
+    font-size: 2.5rem !important;
+  }
+  .fs-lg-2 {
+    font-size: 2rem !important;
+  }
+  .fs-lg-3 {
+    font-size: 1.75rem !important;
+  }
+  .fs-lg-4 {
+    font-size: 1.5rem !important;
+  }
+  .fs-lg-120 {
+    font-size: 7.5rem !important;
+  }
+  .fs-lg-48 {
+    font-size: 3rem !important;
   }
 }
 @media print {
