--- a/SCSS/bootstrap/_variables.scss
+++ b/SCSS/bootstrap/_variables.scss
@@ -474,7 +474,9 @@ $font-sizes: (
   3: $h3-font-size, // 28px
   4: $h4-font-size, // 24px
   5: $h5-font-size, // 20px
-  6: $h6-font-size  // 16px
+  6: $h6-font-size,  // 16px
+  120: 120px,
+  48: 48px
 ) !default;
 // scss-docs-end font-sizes
 
