[ Boostrap ] Add custimized font-size

--- a/CSS/all.css
+++ b/CSS/all.css
@@ -7394,6 +7394,10 @@ textarea.form-control-lg {
   font-size: calc(1.425rem + 2.1vw) !important;
 }
 
+.fs-28 {
+  font-size: calc(1.3rem + 0.6vw) !important;
+}
+
 .fst-italic {
   font-style: italic !important;
 }
@@ -8340,6 +8344,9 @@ textarea.form-control-lg {
   .fs-sm-48 {
     font-size: calc(1.425rem + 2.1vw) !important;
   }
+  .fs-sm-28 {
+    font-size: calc(1.3rem + 0.6vw) !important;
+  }
   .text-sm-start {
     text-align: left !important;
   }
@@ -9006,6 +9013,9 @@ textarea.form-control-lg {
   }
   .fs-md-48 {
     font-size: calc(1.425rem + 2.1vw) !important;
+  }
+  .fs-md-28 {
+    font-size: calc(1.3rem + 0.6vw) !important;
   }
   .text-md-start {
     text-align: left !important;
@@ -9674,6 +9684,9 @@ textarea.form-control-lg {
   .fs-lg-48 {
     font-size: calc(1.425rem + 2.1vw) !important;
   }
+  .fs-lg-28 {
+    font-size: calc(1.3rem + 0.6vw) !important;
+  }
   .text-lg-start {
     text-align: left !important;
   }
@@ -10340,6 +10353,9 @@ textarea.form-control-lg {
   }
   .fs-xl-48 {
     font-size: calc(1.425rem + 2.1vw) !important;
+  }
+  .fs-xl-28 {
+    font-size: calc(1.3rem + 0.6vw) !important;
   }
   .text-xl-start {
     text-align: left !important;
@@ -11008,6 +11024,9 @@ textarea.form-control-lg {
   .fs-xxl-48 {
     font-size: calc(1.425rem + 2.1vw) !important;
   }
+  .fs-xxl-28 {
+    font-size: calc(1.3rem + 0.6vw) !important;
+  }
   .text-xxl-start {
     text-align: left !important;
   }
@@ -11037,6 +11056,9 @@ textarea.form-control-lg {
   .fs-48 {
     font-size: 3rem !important;
   }
+  .fs-28 {
+    font-size: 1.75rem !important;
+  }
   .fs-sm-1 {
     font-size: 2.5rem !important;
   }
@@ -11054,6 +11076,9 @@ textarea.form-control-lg {
   }
   .fs-sm-48 {
     font-size: 3rem !important;
+  }
+  .fs-sm-28 {
+    font-size: 1.75rem !important;
   }
   .fs-md-1 {
     font-size: 2.5rem !important;
@@ -11073,6 +11098,9 @@ textarea.form-control-lg {
   .fs-md-48 {
     font-size: 3rem !important;
   }
+  .fs-md-28 {
+    font-size: 1.75rem !important;
+  }
   .fs-lg-1 {
     font-size: 2.5rem !important;
   }
@@ -11090,6 +11118,9 @@ textarea.form-control-lg {
   }
   .fs-lg-48 {
     font-size: 3rem !important;
+  }
+  .fs-lg-28 {
+    font-size: 1.75rem !important;
   }
 }
 @media print {
