--- a/SCSS/bootstrap/_variables.scss
+++ b/SCSS/bootstrap/_variables.scss
@@ -476,7 +476,8 @@ $font-sizes: (
   5: $h5-font-size, // 20px
   6: $h6-font-size,  // 16px
   120: 120px,
-  48: 48px
+  48: 48px,
+  28: 28px
 ) !default;
 // scss-docs-end font-sizes
 
