--- a/CSS/bootstrap.css
+++ b/CSS/bootstrap.css
@@ -4386,6 +4386,7 @@ textarea.form-control-lg {
   background-color: #000;
   border: 0;
   border-radius: 0;
+  border-radius: 16px;
   overflow-anchor: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
 }
@@ -4433,34 +4434,12 @@ textarea.form-control-lg {
 
 .accordion-item {
   background-color: #000;
-  border: 1px solid rgba(0, 0, 0, 0.125);
-}
-.accordion-item:first-of-type {
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-}
-.accordion-item:first-of-type .accordion-button {
-  border-top-left-radius: calc(1rem - 1px);
-  border-top-right-radius: calc(1rem - 1px);
-}
-.accordion-item:not(:first-of-type) {
-  border-top: 0;
-}
-.accordion-item:last-of-type {
-  border-bottom-right-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-}
-.accordion-item:last-of-type .accordion-button.collapsed {
-  border-bottom-right-radius: calc(1rem - 1px);
-  border-bottom-left-radius: calc(1rem - 1px);
-}
-.accordion-item:last-of-type .accordion-collapse {
-  border-bottom-right-radius: 1rem;
-  border-bottom-left-radius: 1rem;
 }
 
 .accordion-body {
   padding: 1rem 1.25rem;
+  line-height: 150%;
+  padding-top: 0;
 }
 
 .accordion-flush .accordion-collapse {
