--- a/SCSS/_pricing.scss
+++ b/SCSS/_pricing.scss
@@ -36,13 +36,12 @@
     border: 1px solid $black-80;
     border-radius: 16px;
     &:hover {
-        border: 1px solid $light;
+        border-color: $light;
     }
 }
 .accordion-item.show {
-    border-color: $light;
+    border-color: $white;
 }
-
 
 
 @media(max-width: 992px){
