Finish input filed

--- a/CSS/all.css
+++ b/CSS/all.css
@@ -11470,6 +11470,33 @@ img {
   left: 16px;
 }
 
+/* Search */
+.search .form-control {
+  border: 0;
+  background-color: #F2F2F2;
+  color: #212529;
+}
+
+.search {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+.search > *:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.search input {
+  padding: 20px 40px 20px 76px;
+}
+
+.search .material-icons { /*左邊圖示*/
+  position: absolute;
+  left: 42px;
+  top: calc(50% - 0.5em);
+}
+
 /* FQA */
 .accordion-item {
   border: 1px solid #525252;
