--- a/SCSS/_pricing.scss
+++ b/SCSS/_pricing.scss
@@ -31,6 +31,45 @@
     left: 16px;
 }
 
+/* Search */
+
+// Remove outer border and shadow of input on focus state
+.search > *:focus {
+    outline: none;
+    box-shadow: none;
+}
+.dropdown > *:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.search {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    .form-control {
+        border: 0;
+        background-color: $black-20;
+        color: $dark;
+    }
+    input {
+        padding: 20px 40px 20px 76px;
+    }
+    .material-icons {
+        position: absolute;
+        left: 42px;
+        top: calc(50% - 0.5em);
+    }
+}
+
+.btn-filter {
+    display: flex;
+    align-items: center;
+    background-color: $white;
+    border: 1px solid $black-20;
+    padding: 20px 32px;
+}
+
 /* FQA */
 .accordion-item {
     border: 1px solid $black-80;
