--- a/SCSS/_pricing.scss
+++ b/SCSS/_pricing.scss
@@ -31,7 +31,7 @@
     left: 16px;
 }
 
-/* Search */
+/* Tool-list: Search */
 
 // Remove outer border and shadow of input on focus state
 .search > *:focus {
@@ -62,12 +62,29 @@
     }
 }
 
-.btn-filter {
+// Custimize dropdown css style
+.btn-search-bar {
     display: flex;
     align-items: center;
     background-color: $white;
+    color: $dark;
     border: 1px solid $black-20;
+    border-radius: 16px;
     padding: 20px 32px;
+    &:hover, &:focus {
+        background-color: $white;
+        color: $dark;
+        border-color: $dark;
+    }
+}
+a.dropdown-item {
+    color: $dark;
+    padding: 16px 20px;
+}
+
+a.dropdown-item:active {
+    background-color: $white;
+    color: $dark;
 }
 
 /* FQA */
