--- a/SCSS/_home.scss
+++ b/SCSS/_home.scss
@@ -22,8 +22,45 @@
 }
 
 /* Banner-animation */
-.grass-icon {
-    height: 180px;
+.banner-animation {
+    li {
+        overflow: hidden;
+    }
+    .grass-icon {
+        width: 180px;
+        height: auto;
+        position: relative;
+        animation-name: banner;
+        animation-duration: 3s;
+        animation-iteration-count: infinite;
+    }
+    
+    .grass-1 {
+        animation-delay: 0.5s;
+    }
+    
+    .grass-2 {
+        animation-delay: 0.3s;
+    }
+    .grass-3 {
+        animation-delay: 0s;
+    }
+}
+
+
+@keyframes banner {
+0% {
+    transform: translateY(100%);
+}
+35% {
+    transform: translateY(0%);
+}
+50% {
+    transform: translateY(0%);
+}
+100% {
+    transform: translateY(-100%);
+}
 }
 
 /* Enterprise */
@@ -280,11 +317,8 @@ a.filter-orderBy-active::before {
     .container {
         padding: 30px;
     }
-    .banner-animation {
-        overflow: hidden;
-        .grass-icon{
-            height: 117px;
-        }
+    .grass-icon{
+        width: 117px;
     }
     .header ul{
         flex-direction: column;
