--- a/CSS/all.css
+++ b/CSS/all.css
@@ -11241,10 +11241,41 @@ img {
 }
 
 /* Banner-animation */
-.grass-icon {
-  height: 180px;
+.banner-animation li {
+  overflow: hidden;
+}
+.banner-animation .grass-icon {
+  width: 180px;
+  height: auto;
+  position: relative;
+  animation-name: banner;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+.banner-animation .grass-1 {
+  animation-delay: 0.5s;
+}
+.banner-animation .grass-2 {
+  animation-delay: 0.3s;
+}
+.banner-animation .grass-3 {
+  animation-delay: 0s;
 }
 
+@keyframes banner {
+  0% {
+    transform: translateY(100%);
+  }
+  35% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
 /* Enterprise */
 .enterprise-list {
   display: flex;
@@ -11502,11 +11533,8 @@ a.filter-orderBy-active::before {
   .container {
     padding: 30px;
   }
-  .banner-animation {
-    overflow: hidden;
-  }
-  .banner-animation .grass-icon {
-    height: 117px;
+  .grass-icon {
+    width: 117px;
   }
   .header ul {
     flex-direction: column;
