--- a/SCSS/_pricing.scss
+++ b/SCSS/_pricing.scss
@@ -46,7 +46,7 @@
 
 @media(max-width: 992px){
     .filter-list {
-        margin-top: 24px;
+        margin: 24px auto;
     }
 }
 @media(max-width: 768px){
